# paraview_for_lofar

./: INSTALLATION.md  README.md
Code/: CMakeLists.txt  LofarView.xml  server_manager.xml
Code/CMakeModules/: FindCasaCore.cmake
Code/src/: AccumulateSlices.h  FitsReader.cpp  FitsReader.h  LofarApplyMask.cpp  LofarGaussianBlur.cpp  LofarIntegrateFrequencies.cpp  LofarMaskNoise.cpp  LofarSliceImage.cpp  LofarSliceImage.h  RegisterLofarView.cpp  RegisterLofarView.h  SliceImage.h  main.cpp  vtkPVLofarView.cpp  vtkPVLofarView.h
Config/: .casarc
Config/casacore_data/data/geodetic/IERSeop2000/: table.f0
Config/casacore_data/data/geodetic/IERSeop97/: table.f0
Config/casacore_data/data/geodetic/IERSpredict/: table.f0
Config/casacore_data/data/geodetic/IERSpredict2000/: table.f0  table.info
Config/casacore_data/data/geodetic/IGRF/: table.f0  table.f0i
Config/casacore_data/data/geodetic/TAI_UTC.old/: table.f0
Reader/: CMakeLists.txt  gui_resource.xml  server_manager.xml
Reader/CMakeModules/: FindWcs.cmake
Reader/src/: AccumulateSlices.cpp  AccumulateSlices.h  FitsReader.cpp  FitsReader.h  LofarApplyMask.cpp  LofarApplyMask.h  LofarGaussianBlur.cpp  LofarGaussianBlur.h  LofarIntegrateFrequencies.cpp  LofarIntegrateFrequencies.h  LofarMaskNoise.cpp  LofarMaskNoise.h  SliceImage.cpp  SliceImage.h  main.cpp  regrid.cpp
Scripts/: filter_and_integrate.py  slice_image.py
